--- a/task1.css
+++ b/task1.css
@@ -2,34 +2,45 @@ body{
     background-color: lightpink;
 }
 .btns{
-    margin-top: 400px;
+    margin-top: 10px;
     margin-left: 400px;
     margin-bottom: 400px;
     
-}
-.button3{
-    background-color: white ;
-    margin-left: 120px;
-    margin-bottom: 20px ;
-    width: 300px ;
-    color: black ;
-    font-size: larger;
-    height: 90px;
-    border-radius: 16.5px;
+    
 }
 
-.button3:hover{
-    background-color: lightgray ;
-}
 .button{
-   width: 132px;
-   height: 132px;
+   width: 100px;
+   height: 100px;
    border-radius: 16.5px;
    display: inline-block;
    background-color: darkblue;
-   /* opacity: 0.20; */
+   opacity: 0.20;
+
+
 }
-/* .button:hover{
+
+.button2{
     background-color: white;
     color: white;
-} */
+}
+
+.button3{
+    background-color: white ;
+    margin-left: 50px;
+    margin-bottom: 0px ;
+    width: 300px ;
+    color: black ;
+    border-radius: 16.5px;
+    height: 30px ;
+    font-size: large;
+}
+
+.button3:hover{
+    background-color: lightpink ;
+}
+
+.lc{
+    margin-left: 30px ;
+    margin-bottom: -30px;
+}
